test/sematest/invalid/InvalidMethods.java

class InvalidMethods {

	
	public static void main(String[] args) {
		
	}
	
	public void test()
	{
		
	}
	
	public void test(boolean test)
	{
		
	}
	
	public int test(int test)
	{
		return 0;
	}
}
